# telco-tools

./: .gitignore  Makefile  README.md  meson.build  setup.py
agents/: build.py
agents/fs/: agent.ts  package-lock.json  package.json
agents/itracer/: agent.ts  package-lock.json  package.json
agents/tracer/: package-lock.json  package.json
completions/: meson.build  telco.fish
scripts/: meson.build  script.in
telco_tools/: _repl_magic.py  apk.py  application.py  compiler.py  creator.py  discoverer.py  itracer.py  join.py  kill.py  ls.py  lsd.py  ps.py  pull.py  push.py  reactor.py  repl.py  rm.py  tracer.py
tests/: test_arguments.py  test_discoverer.py  test_tracer.py
